--- a/updatedFrontEnd/src/app/admin-module/admin-module.component.html
+++ b/updatedFrontEnd/src/app/admin-module/admin-module.component.html
@@ -23,15 +23,15 @@
               <!-- //i ahve use ./dash-board because there is any other slug which is admin that's way i use . if there are two slugs then i will use .. two dots -->
             </li>
             <li class="nav-item">
-                <a class="nav-link" aria-current="page" routerLink="./products" routerLinkActive="router-link-active" >
+                <a class="nav-link" aria-current="page" routerLink="./createquiz" routerLinkActive="router-link-active" >
                   <span data-feather="home"></span><i class="fab fa-uncharted"></i>
-                  Products
+                  createQuiz
                 </a>
               </li>
             <li class="nav-item">
                 <a class="nav-link" aria-current="page" routerLink="./products-analystic" routerLinkActive="router-link-active" >
                   <span data-feather="home"></span><i class="fab fa-uncharted"></i>
-                  Products-Analystics
+                  Quiz-Analystics
                 </a>
               </li>
           </ul>
