--- a/updatedFrontEnd/src/app/admin-module/admin-module.component.html
+++ b/updatedFrontEnd/src/app/admin-module/admin-module.component.html
@@ -16,7 +16,7 @@
         <div class="position-sticky pt-3">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" routerLink="./dash-board" routerLinkActive="router-link-active" >
+              <a class="nav-link" aria-current="page" routerLink="./dashboard" routerLinkActive="router-link-active" >
                 <span data-feather="home"></span><i class="fab fa-uncharted"></i>
                 Dashboard
               </a>
@@ -29,7 +29,7 @@
                 </a>
               </li>
             <li class="nav-item">
-                <a class="nav-link" aria-current="page" routerLink="./products-analystic" routerLinkActive="router-link-active" >
+                <a class="nav-link" aria-current="page" routerLink="./quiz-analystic" routerLinkActive="router-link-active" >
                   <span data-feather="home"></span><i class="fab fa-uncharted"></i>
                   Quiz-Analystics
                 </a>
