--- a/updatedFrontEnd/src/app/admin-module/admin-component/create-quiz/create-quiz.component.html
+++ b/updatedFrontEnd/src/app/admin-module/admin-component/create-quiz/create-quiz.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="questionForm" (ngSubmit)="buildForm()" class="container mt-5">
+<form [formGroup]="questionForm" (ngSubmit)="submitform()" class="container mt-5">
   <div formArrayName="quize">
     <div *ngFor="let question of questionForm.get('quize').controls; let i = index" [formGroupName]="i" class="card mb-4">
       <div class="card-body">
