--- a/updatedFrontEnd/src/app/admin-module/admin-module.component.html
+++ b/updatedFrontEnd/src/app/admin-module/admin-module.component.html
@@ -28,6 +28,12 @@
                   createQuiz
                 </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" routerLink="./append-quiz" routerLinkActive="router-link-active" >
+                  <span data-feather="home"></span><i class="fab fa-uncharted"></i>
+                  Append Quiz
+                </a>
+              </li>
             <li class="nav-item">
                 <a class="nav-link" aria-current="page" routerLink="./quiz-analystic" routerLinkActive="router-link-active" >
                   <span data-feather="home"></span><i class="fab fa-uncharted"></i>
