--- a/updatedFrontEnd/src/app/admin-module/admin-component/append-quiz/append-quiz.component.html
+++ b/updatedFrontEnd/src/app/admin-module/admin-component/append-quiz/append-quiz.component.html
@@ -1,15 +1,32 @@
 <div class="container">
     <div class="row">
-      <div class="col">
-        <h1>Welcome to the append quiz</h1>
+        <div class="col">
+            <h1>Welcome to the append quiz</h1>
+            <div class="mb-3">
+                <label class="tag">Select-organization</label>
+                <select name="selectColor" (change)="onChageFetchDataFromDropDown($event)"
+                    class="form-control selectColor" id="" placeholder="selectColor" formControlName="color">
+                    <option value="" selected>--- Select an organization ---</option>
+                    <option *ngFor="let item of organizationName">{{item}}</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label class="tag">Select-subject</label>
+                <select name="selectColor" (change)="onChageFetchDataFromDropDown($event)"
+                    class="form-control selectColor" id="" placeholder="selectColor" formControlName="color">
+                    <option value="" selected>--- Select an subjectName---</option>
+                    <option *ngFor="let item of subjectName">{{item}}</option>
+                </select>
+            </div>
+        </div>
+
         <div class="mb-3">
-          <label class="tag">Select-organization</label>
-          <select name="selectColor" (change)="onChageFetchDataFromDropDown($event)" class="form-control selectColor" id="" placeholder="selectColor" formControlName="color">
-            <option value="" selected>--- Select an organization ---</option>
-            <option *ngFor="let item of organizationName">{{item}}</option>
-          </select>
-        </div> 
-      </div>
+            <label class="tag">Select-setNumber</label>
+            <select name="selectColor" (change)="onChageFetchDataFromDropDown($event)" class="form-control selectColor"
+                id="" placeholder="selectColor" formControlName="color">
+                <option value="" selected>--- Select an setNumber ---</option>
+                <option *ngFor="let item of setNumber">{{item}}</option>
+            </select>
+        </div>
     </div>
-  </div>
-  
+</div>
