--- a/updatedFrontEnd/src/app/admin-module/admin-component/append-quiz/append-quiz.component.html
+++ b/updatedFrontEnd/src/app/admin-module/admin-component/append-quiz/append-quiz.component.html
@@ -1,32 +1,60 @@
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <h1>Welcome to the append quiz</h1>
-            <div class="mb-3">
-                <label class="tag">Select-organization</label>
-                <select name="selectColor" (change)="onChageFetchDataFromDropDown($event)"
-                    class="form-control selectColor" id="" placeholder="selectColor" formControlName="color">
-                    <option value="" selected>--- Select an organization ---</option>
-                    <option *ngFor="let item of organizationName">{{item}}</option>
-                </select>
+<div class="container mt-2">
+    <form [formGroup]="questionObjectentity" (ngSubmit)="submitForm()">
+        <div class="row">
+            <div class="col">
+                <h1>Welcome to the append quiz</h1>
+                <div class="mb-3">
+                    <label class="tag">Select-organization</label>
+                    <select name="selectColor" (change)="onChageFetchDataFromDropDown($event)"
+                        class="form-control selectColor" id="" placeholder="selectColor" formControlName="organization">
+                        <option value="" selected>--- Select an organization ---</option>
+                        <option *ngFor="let item of organizationName">{{item}}</option>
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label class="tag">Select-subject</label>
+                    <select name="selectColor" formControlName="subject" class="form-control selectColor" id=""
+                        placeholder="selectColor">
+                        <option value="" selected>--- Select a subjectName---</option>
+                        <option *ngFor="let item of subjectName">{{item}}</option>
+                    </select>
+                </div>
             </div>
             <div class="mb-3">
-                <label class="tag">Select-subject</label>
-                <select name="selectColor" (change)="onChageFetchDataFromDropDown($event)"
-                    class="form-control selectColor" id="" placeholder="selectColor" formControlName="color">
-                    <option value="" selected>--- Select an subjectName---</option>
-                    <option *ngFor="let item of subjectName">{{item}}</option>
+                <label class="tag">Select-setNumber</label>
+                <select name="selectColor" formControlName="setName" class="form-control selectColor" id=""
+                    placeholder="selectColor">
+                    <option value="" selected>--- Select a setNumber ---</option>
+                    <option *ngFor="let item of setNumber">{{item}}</option>
                 </select>
             </div>
+            <div class="form-group">
+                <label>Description:</label>
+                <textarea formControlName="description" class="form-control"></textarea>
+                <div
+                    *ngIf="questionObjectentity.get('description').errors && (questionObjectentity.get('description').dirty || questionObjectentity.get('description').touched)">
+                    <div class="alert alert-danger" *ngIf="questionObjectentity.get('description').errors.required">
+                        Description is required.
+                    </div>
+                </div>
+            </div>
+            <div formArrayName="alternatives">
+                <div *ngFor="let alternative of questionObjectentity.get('alternatives').controls; let j = index"
+                    [formGroupName]="j" class="form-check">
+                    <input type="checkbox" formControlName="isCorrect" class="form-check-input">
+                    <label class="form-check-label">
+                        Alternative {{ j + 1 }}
+                    </label>
+                    <input type="text" formControlName="text" class="form-control">
+                    <div
+                        *ngIf="alternative.get('text').errors && (alternative.get('text').dirty || alternative.get('text').touched)">
+                        <div class="alert alert-danger" *ngIf="alternative.get('text').errors.required">
+                            Alternative text is required.
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <div class="mb-3">
-            <label class="tag">Select-setNumber</label>
-            <select name="selectColor" (change)="onChageFetchDataFromDropDown($event)" class="form-control selectColor"
-                id="" placeholder="selectColor" formControlName="color">
-                <option value="" selected>--- Select an setNumber ---</option>
-                <option *ngFor="let item of setNumber">{{item}}</option>
-            </select>
-        </div>
-    </div>
+        <button type="submit" class="btn btn-outline-primary w-100 mt-2">Submit</button>
+    </form>
 </div>
