--- a/updatedFrontEnd/src/app/admin-module/admin-module.component.html
+++ b/updatedFrontEnd/src/app/admin-module/admin-module.component.html
@@ -5,7 +5,7 @@
     </button>
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap">
-        <a class="nav-link" [routerLink]="['']" routerLinkActive="router-link-active" > <i class="fas fa-power-off"></i> Sign out</a>
+        <a class="nav-link" role="button" (click)="logOut()" > <i class="fas fa-power-off"></i> Sign out</a>
       </li>
     </ul>
   </header>
